--- a/assets/less/modules/streams.less
+++ b/assets/less/modules/streams.less
@@ -189,8 +189,8 @@
   }
 
   img {
-    max-width: 20%;
-    min-height: 100px;
+    min-height: 50px;
+    max-width: 20%;    
     height: auto;
 
     margin-right: @marginRight;
@@ -198,7 +198,7 @@
   }
 
   &-item {
-    border-bottom: 1px solid #000;
+    border-bottom: none;
     margin: 0;
 
     &-details {
